--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -48,7 +48,10 @@ task :deploy => [:build] do
     cp f, "#{OUTFOLDER}/vendor/#{f}"
   }
 
-  cp ZUPFNOTER_JS, "#{OUTFOLDER}/public/#{ZUPFNOTER_JS}"
+  sh "java -jar ../tools/yuicompressor-2.4.2.jar  --line-break 7000 -o #{OUTFOLDER}/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
+
+
+  #p ZUPFNOTER_JS, "#{OUTFOLDER}/public/#{ZUPFNOTER_JS}"
 
   cp "../public/index.css", "#{OUTFOLDER}/public/index.css"
   cp "../vendor/ace/ace.js", "#{OUTFOLDER}/vendor/ace/ace.js"
