--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -1,6 +1,9 @@
 #Gemfile
 source 'https://rubygems.org'
 
+gem 'sass'
+gem 'zip'
 gem 'opal', '>= 0.6.0'
 gem 'opal-jquery'
 gem 'vector2d', "~> 2.1.0"
+gem 'confstruct'
