--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -1,6 +1,6 @@
 # Rakefile
 require 'opal'
-require 'opal-jquery'
+#require 'opal-jquery'
 require 'erb'
 require 'zip'
 
@@ -9,6 +9,9 @@ PACKAGE_JSON = "../package.json"
 ZUPFNOTER_JS = "build.js"
 OUTFOLDER = "../deploy_files"
 INDEXFILE = "index.html"
+
+VENDORFOLDER ="../vendor"
+ACE_REPO = "../../../../200_zupfnoter_external_components/ace"
 
 
 desc "Build our app to #{ZUPFNOTER_JS}"
@@ -25,6 +28,16 @@ task :build do
     cmd = "sass #{f} > #{File.dirname(f)}/#{File.basename(f, ".scss")}.css"
     puts sh cmd
   end
+end
+
+
+desc "Rebuuild Ace configuration to #{VENDORFOLDER}/ace"
+task :build_ace do
+  cd ACE_REPO do
+    sh "node Makefile.dryice.js -nc -m full"
+    sh "node Makefile.dryice.js full"
+  end
+  cp_r("#{ACE_REPO}/build/src-min-noconflict", "#{VENDORFOLDER}/ace")
 end
 
 desc "Build the documentation"
