updated Rakefile to use uglify-js

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -66,7 +66,7 @@ task :deploy => [:build] do
     cp f, "#{OUTFOLDER}/webserver/vendor/#{f}"
   }
 
-  sh "java -jar ../tools/yuicompressor-2.4.2.jar  --line-break 7000 -o #{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
+  sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
 
 
   #p ZUPFNOTER_JS, "#{OUTFOLDER}/public/#{ZUPFNOTER_JS}"
@@ -132,9 +132,8 @@ task :buildDesktop => [:build] do
     f.puts ERB.new(a).result
   end
 
-  #sh "java -jar ../tools/yuicompressor-2.4.2.jar  --line-break 7000 -o #{zupfnoter_compressedjs_filename} #{ZUPFNOTER_JS}"
-
-  copy(ZUPFNOTER_JS, zupfnoter_compressedjs_filename)
+  sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{zupfnoter_compressedjs_filename} #{ZUPFNOTER_JS}"
+  #copy(ZUPFNOTER_JS, zupfnoter_compressedjs_filename)
 
   Dir["../vendor/*.*"].each { |f|
     copy(f, "#{desktop_stage}/vendor/#{f}")
@@ -148,6 +147,8 @@ task :buildDesktop => [:build] do
   ["vendor/ace", "vendor/ace/snippets", "public/icons"].each do |d|
     mkdir_p("#{desktop_stage}/#{d}")
   end
+
+  #todo improve handling of files
   cp("../public/index.css", "#{desktop_stage}/public/index.css")
   cp("../vendor/ace/ace.js", "#{desktop_stage}/vendor/ace/ace.js")
   cp("../vendor/ace/mode-abc.js", "#{desktop_stage}/vendor/ace/mode-abc.js")
@@ -171,5 +172,5 @@ task :buildDesktop => [:build] do
   cd "#{OUTFOLDER}/node-webkit-v0.11.1-win-x64" do
     sh "cat nw.exe ../desktop/zupfnoter.nw > zupfnoter.exe"
   end
-  #nw_file.add "../public/icons/favicon.gif", "#{OUTFOLDER}/webserver/public/icons/favicon.gif"
+  nw_file.add "../public/icons/favicon.gif", "#{OUTFOLDER}/webserver/public/icons/favicon.gif"
 end
