--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -4,6 +4,8 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'sass'
 gem 'zip'
+gem 'prmd'
 gem 'opal', '~> 0.7.0'
 gem 'opal-jquery', '~> 0.3.0'
 gem 'vector2d', "~> 2.1.0"
+gem 'pry'
