--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -3,16 +3,27 @@ require 'opal'
 require 'opal-jquery'
 require 'erb'
 require 'zip'
+require 'net/http'
+require 'pry'
 
 HTMLTEMPLATE = "../index_opal.html.erb"
 PACKAGE_JSON = "../package.json"
 ZUPFNOTER_JS = "build.js"
-OUTFOLDER = "../deploy_files"
-INDEXFILE = "index.html"
+OUTFOLDER    = "../deploy_files"
+INDEXFILE    = "index.html"
 
 VENDORFOLDER ="../vendor"
-ACE_REPO = "../../../../200_zupfnoter_external_components/ace"
+ACE_REPO     = "../../../../200_zupfnoter_external_components/ace"
 
+
+desc "Update abc2svg from Jean-Francois' website"
+task :updateAbc2svg do
+  abc2svg_file = "abc2svg-1.js"
+  abc2svg_js   = Net::HTTP.get(URI("http://moinejf.free.fr/js/#{abc2svg_file}"))
+  File.open("#{VENDORFOLDER}/#{abc2svg_file}", "w") do |f|
+    f.puts abc2svg_js
+  end
+end
 
 desc "Build our app to #{ZUPFNOTER_JS}"
 task :build do
@@ -66,10 +77,10 @@ task :deploy => [:build] do
     cp f, "#{OUTFOLDER}/webserver/vendor/#{f}"
   }
 
-  sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
+  #sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
 
 
-  #p ZUPFNOTER_JS, "#{OUTFOLDER}/public/#{ZUPFNOTER_JS}"
+  cp ZUPFNOTER_JS, "#{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS}"
   # todo:this is not dry - see buildDesktop
   ["vendor/ace", "vendor/ace/snippets", "public/icons"].each do |d|
     mkdir_p("#{OUTFOLDER}/webserver/#{d}")
@@ -77,6 +88,8 @@ task :deploy => [:build] do
   cp "../public/index.css", "#{OUTFOLDER}/webserver/public/index.css"
   cp "../vendor/ace/ace.js", "#{OUTFOLDER}/webserver/vendor/ace/ace.js"
   cp "../vendor/ace/mode-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/mode-abc.js"
+  cp "../vendor/ace/theme-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/theme-abc.js"
+  cp "../vendor/ace/snippets/text.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/text.js"
   cp "../vendor/ace/ext-language_tools.js", "#{OUTFOLDER}/webserver/vendor/ace/ext-language_tools.js"
   cp("../vendor/ace/snippets/abc.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/abc.js")
   cp("../public/icons/favicon.gif", "#{OUTFOLDER}/webserver/public/icons/favicon.gif")
@@ -105,8 +118,8 @@ desc "build the desktop application"
 task :buildDesktop => [:build] do
   desktop_folder = "#{OUTFOLDER}/desktop"
   nodewebkit_app = "#{OUTFOLDER}/node-webkit.app"
-  zupfnoter_app = "#{desktop_folder}/zupfnoter.app"
-  desktop_stage = "#{desktop_folder}/zupfnoter.nw.stage"
+  zupfnoter_app  = "#{desktop_folder}/zupfnoter.app"
+  desktop_stage  = "#{desktop_folder}/zupfnoter.nw.stage"
 
   rm_rf(desktop_folder)
   mkdir_p("#{desktop_stage}/public")
@@ -114,8 +127,8 @@ task :buildDesktop => [:build] do
   mkdir_p("#{desktop_stage}/vendor")
   mkdir_p("#{desktop_stage}/vendor/ace")
 
-  nw_filename = "#{desktop_folder}/zupfnoter.nw"
-  index_filename = "#{desktop_stage}/index.html"
+  nw_filename                     = "#{desktop_folder}/zupfnoter.nw"
+  index_filename                  = "#{desktop_stage}/index.html"
   zupfnoter_compressedjs_filename = "#{desktop_stage}/public/#{ZUPFNOTER_JS}"
 
   def javascript_include_tag(filename)
