"Delegate dependency management directly to Sprockets (when used) making sourcemaps swift again. This means code generated by sprockets will always need to be bootstrapped via Opal.load or Opal.require. Luckily Opal::Processor.load_asset_code(sprockets, name) does just that in the right way."

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -35,6 +35,7 @@ task :build do
 
   File.open(ZUPFNOTER_JS, "w+") do |out|
     out << env["application"].to_s
+    out << Opal::Processor.load_asset_code(env, 'application')
   end
 
   Dir.glob "../public/*.scss" do |f|
