--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'sass'
 gem 'zip'
-gem 'prmd'
+#gem 'prmd'
 gem 'opal', '~> 0.9.0'
 gem 'opal-jquery', '~> 0.4.0'
 gem 'vector2d', "~> 2.1.0"
