--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -105,6 +105,8 @@ task :deploy => [:build] do
   cp "../vendor/ace/ext-language_tools.js", "#{OUTFOLDER}/webserver/vendor/ace/ext-language_tools.js"
   cp("../vendor/ace/snippets/abc.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/abc.js")
   cp("../public/icons/favicon.gif", "#{OUTFOLDER}/webserver/public/icons/favicon.gif")
+  cp("../vendor/abc2svg-1.js", "#{OUTFOLDER}/vendor/abc2svg-1.js")
+
 
   def javascript_include_tag(filename)
     "<script src = \"public/#{ZUPFNOTER_JS}\" type=\"application/javascript\"></script>"
@@ -138,6 +140,16 @@ task :buildDesktop => [:build] do
   mkdir_p("#{desktop_stage}/public/menuicons")
   mkdir_p("#{desktop_stage}/vendor")
   mkdir_p("#{desktop_stage}/vendor/ace")
+  mkdir_p("#{desktop_stage}/vendor/w2ui/dist")
+
+
+  # todo:this is not dry - see buildDesktop
+  ["vendor/ace", "vendor/ace/snippets", "public/icons", "vendor/w2ui", "vendor/w2ui/dist",
+   "vendor/font-awesome/css", "vendor/font-awesome/fonts"
+  ].each do |d|
+    puts "making #{d}"
+    mkdir_p("#{desktop_stage}/#{d}")
+  end
 
   nw_filename                     = "#{desktop_folder}/zupfnoter.nw"
   index_filename                  = "#{desktop_stage}/index.html"
@@ -164,9 +176,19 @@ task :buildDesktop => [:build] do
     copy(f, "#{desktop_stage}/vendor/#{f}")
   }
 
+  Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each { |f| cp f, "#{desktop_stage}/vendor/#{f.split('vendor/').last}" }
+
+  ['w2ui.min.css', 'w2ui.min.js'].each { |f| cp "../vendor/w2ui/dist/#{f}", "#{desktop_stage}/vendor/w2ui/dist/#{f}" }
+
+
   Dir["../public/menuicons/*.*"].each { |f|
     copy(f, "#{desktop_stage}/public/menuicons/")
   }
+
+  Dir["../public/menuicons/w2ui/*.*"].each { |f|
+    copy(f, "#{desktop_stage}/vendor/w2ui/")
+  }
+
 
 
   ["vendor/ace", "vendor/ace/snippets", "public/icons"].each do |d|
@@ -178,7 +200,10 @@ task :buildDesktop => [:build] do
   cp("../vendor/ace/ace.js", "#{desktop_stage}/vendor/ace/ace.js")
   cp("../vendor/ace/mode-abc.js", "#{desktop_stage}/vendor/ace/mode-abc.js")
   cp("../vendor/ace/ext-language_tools.js", "#{desktop_stage}/vendor/ace/ext-language_tools.js")
+  cp "../vendor/ace/theme-abc.js", "#{desktop_stage}/vendor/ace/theme-abc.js"
+  cp "../vendor/ace/snippets/text.js", "#{desktop_stage}/vendor/ace/snippets/text.js"
   cp("../vendor/ace/snippets/abc.js", "#{desktop_stage}/vendor/ace/snippets/abc.js")
+  cp("../vendor/abc2svg-1.js", "#{desktop_stage}/vendor/abc2svg-1.js")
   cp("../public/icons/favicon.gif", "#{desktop_stage}/public/icons/favicon.gif")
 
   cp(PACKAGE_JSON, "#{desktop_stage}/package.json")
