--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -76,8 +76,15 @@ desc "Build a distribution for the server"
 task :deploy => [:build] do
 
 
-  mkdir_p "#{OUTFOLDER}/webserver/vendor/ace"
-  mkdir_p "#{OUTFOLDER}/webserver/public/menuicons"
+  # prepare all requested folders
+  # todo:this is not dry - see buildDesktop
+  ["public/icons", "public/menuicons", "public/demos",
+   "vendor/ace", "vendor/ace/snippets", "vendor/w2ui", "vendor/w2ui/dist",
+   "vendor/font-awesome/css", "vendor/font-awesome/fonts",
+  ].each do |d|
+    mkdir_p("#{OUTFOLDER}/webserver/#{d}")
+  end
+
   Dir["../vendor/*.*"].each { |f|
     cp f, "#{OUTFOLDER}/webserver/vendor/#{f}" unless File.directory?(f)
   }
@@ -85,12 +92,6 @@ task :deploy => [:build] do
   sh "./node_modules/uglify-js/bin/uglifyjs -c -m -o #{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS} #{ZUPFNOTER_JS}"
   #cp ZUPFNOTER_JS, "#{OUTFOLDER}/webserver/public/#{ZUPFNOTER_JS}"
 
-  # todo:this is not dry - see buildDesktop
-  ["vendor/ace", "vendor/ace/snippets", "public/icons", "vendor/w2ui", "vendor/w2ui/dist",
-   "vendor/font-awesome/css", "vendor/font-awesome/fonts"
-  ].each do |d|
-    mkdir_p("#{OUTFOLDER}/webserver/#{d}")
-  end
 
   Dir['../vendor/font-awesome/css/*.*', '../vendor/font-awesome/fonts/*.*'].each { |f| cp f, "#{OUTFOLDER}/webserver/vendor/#{f.split('vendor/').last}" }
 
@@ -98,13 +99,18 @@ task :deploy => [:build] do
 
 
   cp "../public/index.css", "#{OUTFOLDER}/webserver/public/index.css"
+  cp("../public/icons/favicon.png", "#{OUTFOLDER}/webserver/public/icons/favicon.png")
+  Dir["../public/demos/*.abc"].each do |f|
+    cp f, "#{OUTFOLDER}/webserver/public/#{File.basename(f)}"
+  end
+
+
   cp "../vendor/ace/ace.js", "#{OUTFOLDER}/webserver/vendor/ace/ace.js"
   cp "../vendor/ace/mode-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/mode-abc.js"
   cp "../vendor/ace/theme-abc.js", "#{OUTFOLDER}/webserver/vendor/ace/theme-abc.js"
   cp "../vendor/ace/snippets/text.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/text.js"
   cp "../vendor/ace/ext-language_tools.js", "#{OUTFOLDER}/webserver/vendor/ace/ext-language_tools.js"
   cp("../vendor/ace/snippets/abc.js", "#{OUTFOLDER}/webserver/vendor/ace/snippets/abc.js")
-  cp("../public/icons/favicon.png", "#{OUTFOLDER}/webserver/public/icons/favicon.png")
   cp("../vendor/abc2svg-1.js", "#{OUTFOLDER}/vendor/abc2svg-1.js")
 
 
@@ -188,7 +194,6 @@ task :buildDesktop => [:build] do
   Dir["../public/menuicons/w2ui/*.*"].each { |f|
     copy(f, "#{desktop_stage}/vendor/w2ui/")
   }
-
 
 
   ["vendor/ace", "vendor/ace/snippets", "public/icons"].each do |d|
