--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -246,3 +246,71 @@ task :buildDesktop => [:build] do
   end
   #nw_file.add "../public/icons/favicon.gif", "#{OUTFOLDER}/webserver/public/icons/favicon.gif"
 end
+
+
+desc "generate a raw file for documentation of config"
+task :buildConfigDoc do
+  class Document
+    def self.ready?
+
+    end
+  end
+
+
+  def get_example(conf, key)
+    neatjson_options = {wrap:          60, aligned: true, after_comma: 1, after_colon_1: 1, after_colon_n: 1, before_colon_n: 1, sorted: true,
+                       explicit_sort: [[:produce, :annotations, :restposition, :default, :repeatstart, :repeatend, :extract,
+                                        :title, :voices, :flowlines, :subflowlines, :synchlines, :jumplines, :repeatsigns, :layoutlines, :barnumbers, :countnotes, :legend, :notes, :lyrics, :nonflowrest, :tuplet, :layout,
+                                        :annotation, :partname, :variantend, :countnote, :stringnames, # sort within notebound
+                                        :limit_a3, :LINE_THIN, :LINE_MEDIUM, :LINE_THICK, :ELLIPSE_SIZE, :REST_SIZE, # sort within laoyut
+                                        "0", "1", "2", "3", "4", "5", "6", :verses, # extracts
+                                        :cp1, :cp2, :shape, :pos, :hpos, :vpos, :spos, :text, :style, :marks # tuplets annotations
+                                       ],
+                                       []],
+    }
+    k = key.split(".").last
+    %Q{
+"#{k}": #{JSON.neat_generate(conf[key], neatjson_options)}
+      }.split("\n").map { |l| "        #{l}" }.join("\n")
+  end
+
+  ignore_patterns = [/^neatjson/, /abc_parser^*/, /^extract\.[235].*/, /^defaults.*/, /^templates.*/, /^annotations.*/, /^extract\.[1234]/,
+                     /^layout.*/
+  ]
+  produce_patterns = [/annotations\.vl/, /^templates\.tuplets/]
+
+
+  require './controller.rb'
+  require './confstack.rb'
+  require './neatjson.rb'
+
+  a = Controller.init_conf
+  b = Confstack.new(false)
+  b.push(JSON.parse(a.to_json))
+  File.open("xxx.md", "w") do |f|
+    f.puts "# Konfiguration der Ausgabe"
+
+    ignore_keys = b.keys.select{|k| ignore_patterns.select{|ik| k.match(ik)}.count > 0}
+    produce_keys = b.keys.select{|k|  produce_patterns.select{|ik| k.match(ik)}.count > 0}
+    show_keys = (b.keys - ignore_keys + produce_keys).uniq.sort
+
+    puts show_keys
+    show_keys.each do |key|
+      f.puts %Q{
+
+#{("#" * (key.split(".").count + 1))[0,3] }  `#{key}` {##{key}}
+
+
+erklaerung_kommt_noch
+
+
+* Struktur:
+
+* Beispiel:
+
+#{get_example(b, key)}
+
+}
+    end
+  end
+end
