handled Verena's findings in chapter 0 - 3

--- a/ZSUPP_Manifests/UD_zupfnoter.yaml
+++ b/ZSUPP_Manifests/UD_zupfnoter.yaml
@@ -33,6 +33,10 @@
         - ../UD_Abc-Notation/abc-notation-1.md
         - ../UD_Abc-Notation/abc-notation-2.md
 
+    :frontmatter:
+      - ../UD_Zupfnoter-Handbuch/000_UD-Zupfnoter-Titelseite.md
+
+
 
     :editions:
 
